--- a/translations/soph.ant.hoelderlin.deu.xml
+++ b/translations/soph.ant.hoelderlin.deu.xml
@@ -7,7 +7,7 @@
 <titleStmt>
 <title xml:lang="lat">Antigonae</title>
 <author xml:lang="lat">Sophocles</author>
-<editor role="translator">August Lentz</editor>
+<editor role="translator">Friedrich Hölderlin</editor>
 <funder>National Endowment for the Humanities</funder>
 <respStmt>
 <resp>Published original versions of the electronic texts</resp>
